--- a/templates/Notes/eNotes.html
+++ b/templates/Notes/eNotes.html
@@ -5,9 +5,13 @@
 {% block main-content %}
 <main class="mt-5 row">
     <div class="col-xl-12 col-md-12 col-12">
-        <div class="card-header">
+        <div class="widget-content widget-content-area">
             <div class="row">
+                <div class="col-sm">
+                    <h2 style="color: rgb(66, 8, 8);">Notes</h2>
+                  </div>
                 <div class="col-sm-8 form-inline justify-content-end">
+                <a href="{% url 'libraryNotes' %}"><button class="btn btn-warning btn-md" role="button">Library</button></a>
                     <form method="POST" class="my-0" action="{% url 'searchNotes' %}">{% csrf_token %}
                        
                         <input id="searchbox" type="text" class="form-control" name="srh" placeholder="Search Notes"
@@ -21,7 +25,7 @@
             <div class="card-header">
                 <div class="row">
                     <div class="col-xl-12 col-md-12 col-12">
-                        <h2 style="color:black;">Your Notes</h2>
+                        <h4 style="color:black;">Your Notes</h4>
                     </div>
                 </div>
             </div>
@@ -128,121 +132,7 @@
         </div>
     </div>
 </main>
-<main class="mt-5 row">
-    <div class="col-xl-12 col-md-12 col-12">
-        <div class="card widget box box-shadow">
-            <div class="card-header">
-                <div class="row">
-                    <div class="col-xl-12 col-md-12 col-12">
-                        <h2 style="color:black;">Available Notes</h2>
-                    </div>
-                </div>
-            </div>
-            {% if not_bought_institute_notes or not_bought_tutor_notes%}
 
-
-            <h6 style="color:black;" class="m-2 pl-2">Institute Notes</h6>
-
-            <div class="widget-content widget-content-area">
-                <div class="table-responsive">
-                    <table id="htmlgrid" class="testgrid table table-striped table-bordered table-hover mb-4">
-                        <tr>
-                            <th>No.</th>
-                            <th>Note Title</th>
-                            <th>Class</th>
-                            <th>Subject</th>
-                            <th>Description</th>
-                            <th>Institute</th>
-                            <th>Price</th>
-                            <th class="text-center">Buy</th>
-                        </tr>
-
-                        {% for note in not_bought_institute_notes %}
-                        <tr>
-                            <td>{{forloop.counter}}</td>
-                            <td>
-                                <p style="color: black;font-size: 14px;">{{note.title}}</p>
-                            </td>
-                            <td>
-                                <p style="color: black;font-size: 14px;">{{note.forclass}}</p>
-                            </td>
-                            <td>
-                                <p style="color: black;font-size: 14px;">{{note.subject}}</p>
-                            </td>
-                            <td>{{note.description|truncatechars:15}}</td>
-                            <td>
-                                <p style="color: black;font-size: 14px;">{{note.institute.user.username}}</p>
-                            </td>
-                            <td>
-                                <p style="color: black;font-size: 14px;">{{note.price}}</p>
-                            </td>
-                            <td style="text-align: center;">
-                                <a class="btn btn-info" href="{% url 'buyInstituteNotes' note.id %}">Buy Note</a>
-                            </td>
-                        </tr>
-                        {% endfor %}
-
-                    </table>
-                </div>
-            </div>
-            <h6 style="color:black;" class="m-2 pl-2">Tutor Notes</h6>
-
-            <div class="widget-content widget-content-area">
-                <div class="table-responsive">
-                    <table id="htmlgrid" class="testgrid table table-striped table-bordered table-hover mb-4">
-                        <tr>
-                            <th>No.</th>
-                            <th>Note Title</th>
-                            <th>Class</th>
-                            <th>Subject</th>
-                            <th>Description</th>
-                            <th>Teacher</th>
-                            <th>Price</th>
-                            <th class="text-center">Buy</th>
-                        </tr>
-
-
-                        {% for note in not_bought_tutor_notes %}
-                        <tr>
-                            <td>{{forloop.counter}}</td>
-                            <td>
-                                <p style="color: black;font-size: 14px;">{{note.title}}</p>
-                            </td>
-                            <td>
-                                <p style="color: black;font-size: 14px;">{{note.forclass}}</p>
-                            </td>
-                            <td>
-                                <p style="color: black;font-size: 14px;">{{note.subject}}</p>
-                            </td>
-                            <td>{{note.description|truncatechars:15}}</td>
-                            <td>
-                                <p style="color: black;font-size: 14px;">{{note.tutor.user.username}}</p>
-                            </td>
-                            <td>
-                                <p style="color: black;font-size: 14px;">{{note.price}}</p>
-                            </td>
-                            <td style="text-align: center;">
-                                <a class="btn btn-info" href="{% url 'buyTutorNotes' note.id %}">Buy Note</a>
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </table>
-                </div>
-            </div>
-            {% else %}
-
-            <div class="card-header" style="background: none;">
-                <div class="row">
-                    <div class="col-xl-12 col-md-12 col-12">
-                        <h2>No Notes to show</h2>
-                    </div>
-                </div>
-            </div>
-            {% endif %}
-
-        </div>
-    </div>
-</main>
 <script type="text/javascript">
     
 
