--- a/templates/dashboard/student-dashboard.html
+++ b/templates/dashboard/student-dashboard.html
@@ -212,13 +212,46 @@
             </li>
 
             <li class="menu">
-              <a href="{% url 'notesstudents' %}">
+              <a href="#notes" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle collapsed">
                 <div class="">
                   <img src="{% static 'assets/img/notes.png' %}" alt="">
                   <span style="max-width: 95px;">Notes</span>
                 </div>
               </a>
+              <div class="submenu list-unstyled collapse eq-animated eq-fadeInUp" id="notes"
+                data-parent="#topAccordion">
+                <div class="submenu-scroll">
+                  <ul class="list-unstyled">
+                    <li>
+                      <a href="#note" data-toggle="collapse" aria-expanded="true" class="dropdown-toggle"> <span
+                          class="">Notes</span> </a>
+                      <ul class="list-unstyled sub-submenu collapse show eq-animated eq-fadeInUp" id="note">
+                        <li><a href="{% url 'eNotes' %}">E-Notes</a>
+                        </li>
+                        <li><a href="{% url 'libraryNotes' %}">Library</a>
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </li>
+
+            <!-- <li class="menu">
+              <a href="{% url 'eNotes' %}">
+                <div class="">
+                  <img src="{% static 'assets/img/notes.png' %}" alt="">
+                  <span style="max-width: 95px;">Notes</span>
+                </div>
+              </a>
+            </li> -->
+
+
+
+
+
+
+
 
             <li class="menu">
               <a href="{% url 'StudentCalendar' %}">
