--- a/templates/courses-2/archive-teaching.html
+++ b/templates/courses-2/archive-teaching.html
@@ -5,10 +5,10 @@
 {% block main-content %}
 <style>
     #card {
-        background-color: white;
-        padding-bottom: 3rem;
-        padding-top: 3rem;
-        color: black;
+    background-color: white;
+    padding-bottom: 3rem;
+    padding-top: 3rem;
+    color: black;
     }
 </style>
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
@@ -19,7 +19,7 @@
     <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
         <b>{{ k }} !</b>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+        <span aria-hidden="true">&times;</span>
         </button>
     </div>
     {% endfor %}
@@ -32,19 +32,18 @@
                 <div class="col-md-8">
                     <h2 style="color: rgb(0, 0, 0 );">List of Archive Teaching Type</h2>
                 </div>
-
                 <!-- Grid column -->
             </div>
         </div>
         {% if teach %}
         <div class="card-body">
             <!-- Grid row -->
-            <form action="" method="post">{% csrf_token %}
+            <form action="" method="post">
+                {% csrf_token %}
                 <!--Table-->
                 <div class="table-responsive">
                     <table class="table table-striped">
                         <!--Table head-->
-
                         <tr>
                             <th>Sr No</th>
                             <th>Course Name</th>
@@ -54,10 +53,8 @@
                             <th>Time Period</th>
                             <th class='text-center'>Action</th>
                         </tr>
-
                         <!--Table head-->
                         <!--Table body-->
-
                         {% for i in teach %}
                         <tr id="{{ i.pk }}">
                             <td>{{ forloop.counter }}</td>
@@ -66,15 +63,12 @@
                             <td>{{i.teachType}}</td>
                             <td>{{i.duration}}</td>
                             <td>{{i.timePeriod}}</td>
-
                             <td class="text-center">
-
-                                <a class="btn btn-success" href="{% url 'teach-unarchive' i.id %}"><i
-                                        class="flaticon-delete-fill" style="font-size:medium;"></i></a>
-
+                                <a data-toggle="tooltip" title="Delete"  class="btn btn-danger" href="{% url 'deleteteaching' i.id %}"><i class="flaticon-delete-fill"
+                                    style="font-size:medium;"></i></a>
+                                <a data-toggle="tooltip" title="Unarchive" class="btn btn-success" href="{% url 'teach-unarchive' i.id %}"><i
+                                    class="flaticon-delete-fill" style="font-size:medium;"></i></a>
                             </td>
-
-
                             <!-- <div class="btn-group">
                                 <button type="button" data-toggle="modal" data-target="#edit-{{i.pk}}"
                                     href="#edit-{{i.pk}}" class="btn btn-secondary btn-sm"><i
@@ -89,17 +83,11 @@
                                     <button class="btn btn-secondary btn-sm dropdown-item" data-toggle="modal"
                                         data-target="#delete-{{i.pk}}" href="#delete-{{i.pk}}" title="Delete"><i
                                             class="flaticon-delete  bg-danger p-1 text-white br-6 mb-1"></i>Delete</button>
-
+                                
                                 </div>
-                            </div> -->
-                            
+                                </div> -->
                         </tr>
-
-
-
                         {% endfor %}
-
-
                         <!--Table body-->
                     </table>
                 </div>
@@ -117,10 +105,6 @@
         </div>
         {% endif %}
     </div>
-
-
-
-
     <script>
         function checkbox() {
             var value = $("#negativecheck").is(":checked");
@@ -128,16 +112,16 @@
             var output;
             if (value) {
                 output = `<input
-      type="number"
-      class="mt-2 form-control"
-      placeholder="Enter Negative Marks"
-      name="negative_marks"
-      value="0"
-      required
-    />
-    <div class="invalid-feedback">
-      Enter a valid No.
-    </div>`;
+        type="number"
+        class="mt-2 form-control"
+        placeholder="Enter Negative Marks"
+        name="negative_marks"
+        value="0"
+        required
+        />
+        <div class="invalid-feedback">
+        Enter a valid No.
+        </div>`;
             } else {
                 output = "";
             }
@@ -147,7 +131,7 @@
         $(document).ready(function () {
             $('.js-example-basic-single').select2();
         });
-
+        
         function selectclass() {
             var selected = $("#forclass").val();
             $.ajax({
@@ -170,12 +154,11 @@
                 },
             });
         }
-
+        
         $(window).on('pageshow', () => {
             var frm = $('#frm');
             frm[0].reset();
         });
     </script>
-
 </div>
 {% endblock %}
