--- a/templates/courses-2/archive-courses.html
+++ b/templates/courses-2/archive-courses.html
@@ -120,10 +120,10 @@ Institute Dashboard
                     <td>{{i.forclass}}</td>
                     <td>{{i.courseName}}</td>
                     <td class="text-center">
-                      <a data-toggle="tooltip" title="Delete" class="btn btn-danger" href="{% url 'deleteCourse' i.id %}"><i class="flaticon-delete-fill"
+                      <a data-toggle="tooltip" title="Delete" class="btn btn-danger"  href="{% url 'deleteCourse' i.id %}"><i class="flaticon-delete-fill"
                           style="font-size:medium;"></i></a>
-                      <a data-toggle="tooltip" title="Unarchive" class="btn btn-success" href="{% url 'course-unarchive' i.id %}"><i class="flaticon-delete-fill"
-                          style="font-size:medium;"></i></a>
+                      <a data-toggle="tooltip" title="Unarchive" class="btn btn-success" href="{% url 'course-unarchive' i.id %}"><img src="{% static 'assets\img\unarchive-icon1.png' %}"
+                          style="height:22px;"></a>
                     </td>
 
                     <!-- <td class="text-center">
