--- a/templates/courses-2/archive-teaching.html
+++ b/templates/courses-2/archive-teaching.html
@@ -66,8 +66,8 @@
                             <td class="text-center">
                                 <a data-toggle="tooltip" title="Delete"  class="btn btn-danger" href="{% url 'deleteteaching' i.id %}"><i class="flaticon-delete-fill"
                                     style="font-size:medium;"></i></a>
-                                <a data-toggle="tooltip" title="Unarchive" class="btn btn-success" href="{% url 'teach-unarchive' i.id %}"><i
-                                    class="flaticon-delete-fill" style="font-size:medium;"></i></a>
+                                <a data-toggle="tooltip" title="Unarchive" class="btn btn-success" href="{% url 'teach-unarchive' i.id %}"><img src="{% static 'assets\img\unarchive-icon1.png' %}"
+                                    style="height:22px;"></a>
                             </td>
                             <!-- <div class="btn-group">
                                 <button type="button" data-toggle="modal" data-target="#edit-{{i.pk}}"
